# alaya

./: .env.example  .gitignore  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  sast.yml
.semgrep/: rules.yml
docs/: PRD.md  REQUIREMENTS.md
scripts/: generate_large_fixture.py
src/alaya/: __main__.py  audit.py  cache.py  config.py  errors.py  events.py  server.py  vault.py  watcher.py  zk.py
tests/: conftest.py
tests/integration/: test_file_watcher.py  test_hybrid_search.py  test_structure_ops.py  test_vault_navigation.py
tests/unit/: test_audit.py  test_cache.py  test_concurrency.py  test_errors.py  test_events.py  test_server_registration.py  test_server_startup.py  test_vault.py  test_watcher.py
vault_fixture/: inbox.md
vault_fixture/.zk/: config.toml  notebook.db
vault_fixture/areas/: platform-engineering.md
vault_fixture/daily/: 2026-02-23.md  2026-02-24.md  2026-02-25.md
vault_fixture/ideas/: voice-capture.md
vault_fixture/learning/: ckad-study.md
vault_fixture/people/: alex.md  jordan.md
vault_fixture/projects/: alaya-project.md  kubernetes-migration.md  platform-migration.md  second-brain.md
vault_fixture/resources/: kubernetes-notes.md  zero-trust-research.md
vault_fixture_large/: inbox.md
vault_fixture_large/.zk/: notebook.db
vault_fixture_large/areas/: engineering-standards.md  on-call-runbooks.md
vault_fixture_large/daily/: 2026-01-19.md  2026-01-20.md  2026-01-21.md  2026-01-22.md  2026-01-23.md  2026-01-26.md  2026-01-27.md  2026-01-28.md  2026-01-29.md  2026-01-30.md  2026-02-02.md  2026-02-03.md  2026-02-04.md  2026-02-05.md  2026-02-06.md  2026-02-09.md  2026-02-10.md  2026-02-11.md  2026-02-12.md  2026-02-13.md  2026-02-16.md  2026-02-17.md  2026-02-18.md  2026-02-19.md  2026-02-20.md  2026-02-23.md  2026-02-24.md  2026-02-25.md  2026-02-26.md  2026-02-27.md
vault_fixture_large/ideas/: automated-standup.md  context-aware-search.md  knowledge-graph-viz.md  voice-capture.md  weekly-review-bot.md
vault_fixture_large/learning/: distributed-systems.md  machine-learning-ops.md  rust-language.md
vault_fixture_large/people/: alex-chen.md  chen-wei.md  diana-ortiz.md  fatima-al-zahra.md  james-nguyen.md  liam-foster.md  maya-patel.md  priya-sharma.md  raj-krishnamurthy.md  sam-okonkwo.md
vault_fixture_large/projects/: alaya-project.md  api-gateway-project.md  data-pipeline-refactor.md  db-performance-project.md  llm-search-spike.md  (+5 more)
(+123 files in other folders)
