[project]
name = "alaya"
version = "0.1.0"
description = "A second brain — FastMCP server for a zk-managed personal knowledge vault"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.0.2",
    "lancedb>=0.29,<0.31",
    "sentence-transformers[onnx]>=5.2",
    "pymupdf4llm>=0.0.17",
    "trafilatura>=2.0",
    "httpx>=0.28",
    "watchdog>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "pytest-mock>=3.15",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (require real zk binary and vault)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alaya"]
