[project]
name = "alaya"
version = "0.1.0"
description = "A second brain -- FastMCP server for personal knowledge vaults (zk and Obsidian)"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Luke Kucing"}]
keywords = ["mcp", "knowledge-base", "zettelkasten", "obsidian", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: General",
]
dependencies = [
    "fastmcp>=3.0.2",
    "lancedb>=0.29",
    "pymupdf4llm>=0.0.17",
    "trafilatura>=2.0",
    "httpx>=0.28",
    "watchdog>=6.0",
    "fastembed>=0.7.4",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
rerank = [
    "sentence-transformers>=3.0",
]
late-chunking = [
    "transformers>=4.40",
    "torch>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "pytest-mock>=3.15",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (require real zk binary and vault)",
]

[project.urls]
Repository = "https://github.com/luke-kucing/alaya"
Issues = "https://github.com/luke-kucing/alaya/issues"

[project.scripts]
alaya = "alaya.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alaya"]
